# fedired

./: .dockerignore  .editorconfig  .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEDERATION.md  Gemfile  LICENSE.md  Makefile  README.md  SECURITY.md  biome.json  crowdin.yml  docker-compose.example.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.config/: devenv.yml  docker_example.env  example-docker.yml  example.yml  helm_values_example.yml
.fedired/: chats.ts  sponsor.ts  verified-users.ts
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/fedired/: test.yml
.github/workflows/: build_memory.yml  ci.yml  docker-build-check.yml  labeler.yml  nodejs.yml  test-docker.yml  test-fedired.yml
app/controllers/admin/settings/: fedired_controller.rb
app/javascript/mastodon/: initial_state.js  settings.js
app/javascript/mastodon/components/: status_content.js
app/javascript/mastodon/features/ui/: index.js
app/javascript/mastodon/features/ui/components/: link_footer.js  navigation_panel.js
app/javascript/styles/fairy-floss/: diff.scss
app/javascript/styles/mastodon/: components.scss  variables.scss
app/lib/: feed_manager.rb
app/lib/admin/metrics/dimension/: software_versions_dimension.rb
app/serializers/nodeinfo/: serializer.rb
app/views/admin/settings/fedired/: show.html.haml
app/views/admin/settings/shared/: _links.html.haml
app/views/layouts/: application.html.haml
ci/: .gitignore
config/: routes.rb  settings.yml
config/locales/: en.yml  it.yml  simple_form.de.yml  simple_form.en.yml  simple_form.en_GB.yml
custom/: LICENSE
docs/: activitypub-extensions.md  api-change.md  api-doc.md  downgrade.md  downgrade.sql  install-2.md  install.md  upgrade.md  versions.md
fedired/: verified-users.js
lib/mastodon/: version.rb
lib/tasks/: branding.rake
locales/: ar-SA.yml  bg-BG.yml  bn-BD.yml  ca-ES.yml  cs-CZ.yml  da-DK.yml  de-DE.yml  el-GR.yml  en-US.yml  eo.yml  es-ES.yml  fi.yml  fr-FR.yml  gl.yml  hi.yml  hu.yml  id-ID.yml  index.mjs  it-IT.yml  ja-JP.yml  ja-KS.yml  kab.yml  kn-IN.yml  ko-KR.yml  nl-NL.yml  no-NO.yml  pl-PL.yml  pt-BR.yml  pt-PT.yml  ro-RO.yml  ru-RU.yml  sk-SK.yml  sv-SE.yml  th-TH.yml  tr-TR.yml  uk-UA.yml  vi-VN.yml  zh-CN.yml  zh-TW.yml
scripts/: clean-built.mjs  clean-npm.mjs  copy-assets.mjs  copy-index-dev.mjs  copy-index.mjs  dev.mjs
