[workspace]
members = ["packages/backend-rs", "packages/macro-rs/macros", "packages/macro-rs/macros-impl"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
macros = { path = "packages/macro-rs/macros" }
macros-impl = { path = "packages/macro-rs/macros-impl" }

napi = "3.0.0-alpha.22"
napi-derive = "3.0.0-alpha.21"
napi-build = "2.1.3"

argon2 = { version = "0.5.3", default-features = false }
basen = { version = "0.1.0", default-features = false }
bb8 = { version = "0.9.0", default-features = false }
bcrypt = { version = "0.15.1", default-features = false }
chrono = { version = "0.4.38", default-features = false }
convert_case = { version = "0.6.0", default-features = false }
cuid2 = { version = "0.1.3", default-features = false }
emojis = { version = "0.6.3", default-features = false }
error-doc = { version = "0.2.0" }
futures-util = { version = "0.3.30", default-features = false }
identicon-rs = "5.0.1"
idna = { version = "1.0.2", default-features = false }
image = { version = "0.25.2", default-features = false }
isahc = { version = "1.7.2", default-features = false }
nom-exif = { version = "1.4.1", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false }
proc-macro-tester = { version = "0.1.0-alpha.1", default-features = false }
proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.37", default-features = false }
rand = { version = "0.8.5", default-features = false }
redis = { version = "0.26.1", default-features = false }
regex = { version = "1.10.6", default-features = false }
rmp-serde = { version = "1.3.0", default-features = false }
sea-orm = { version = "1.0.1", default-features = false }
serde = { version = "1.0.209", default-features = false }
serde_json = { version = "1.0.127", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
syn = { version = "2.0.77", default-features = false }
sysinfo = { version = "0.31.4", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.40.0", default-features = false }
tokio-test = { version = "0.4.4", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
url = { version = "2.5.2", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
uuid = "1.10.0"
web-push = { version = "0.10.2", default-features = false }
zhconv = "0.3.1"

# subdependencies
## explicitly list OpenSSL to use the vendored version
openssl = "0.10.66"



[profile.release]
lto = true
